--- a/index.html
+++ b/index.html
@@ -1,21 +1,31 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>clock</title>
-		<script src="libraries/p5.js"></script>
-		<!-- <script src="libraries/p5.sound.js"></script> -->
-		<script src="sketch.js"></script>
-		<style>
-			body {
-				margin: 0;
-				padding: 0;
-			}
-			canvas {
-				margin: auto;
-			}
-		</style>
-	</head>
-	<body></body>
+
+<head>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>clock</title>
+	<script src="libraries/p5.js"></script>
+	<!-- <script src="libraries/p5.sound.js"></script> -->
+	<script src="sketch.js"></script>
+	<style>
+		body {
+			margin: 0;
+			padding: 0;
+			height: 100vh;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			box-sizing: border-box;
+		}
+
+		canvas {
+			margin: auto;
+		}
+
+	</style>
+</head>
+
+<body></body>
+
 </html>
