created animated clock with p5js

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<script src="libraries/p5.js"></script>
 	<!-- <script src="libraries/p5.sound.js"></script> -->
 	<script src="Arm.js"></script>
+	<script src="TimeArc.js"></script>
 	<script src=" sketch.js"></script>
 	<style>
 		body {
@@ -18,10 +19,13 @@
 			align-items: center;
 			justify-content: center;
 			box-sizing: border-box;
+			background-color: #0e132c;
 		}
 
 		canvas {
 			margin: auto;
+			border-radius: 100%;
+			/* box-shadow: 0px 0px 35px 0px #000000; */
 		}
 
 	</style>
