--- a/index.html
+++ b/index.html
@@ -28,9 +28,29 @@
 			/* box-shadow: 0px 0px 35px 0px #000000; */
 		}
 
+
+		.anotation {
+
+			position: absolute;
+			bottom: 10px;
+			left: 10px;
+			color: #fff;
+			font-family: 'Courier New', Courier, monospace;
+			font-size: 14px;
+		}
+
+		.anotation a {
+			color: #fff;
+			text-decoration: none;
+			border-bottom: 1px solid #fff;
+		}
+
 	</style>
 </head>
 
-<body></body>
+<body>
+	<p class="anotation"><a href="https://www.github.com/moimigueldev/animated-clock">@moimigueldev</a> </p>
+
+</body>
 
 </html>
