added box shadow

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		canvas {
 			margin: auto;
 			border-radius: 100%;
-			/* box-shadow: 0px 0px 35px 0px #000000; */
+			box-shadow: 0px 0px 35px 0px #000000;
 		}
 
 
